--- a/InspectionsDemo/StoryBoards/Base.lproj/Main.storyboard
+++ b/InspectionsDemo/StoryBoards/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please enter user name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jgt-rY-ML9">
                                                 <rect key="frame" x="0.0" y="0.0" width="333" height="34"/>
-                                                <accessibility key="accessibilityConfiguration" identifier="textUserName" label="textUserName"/>
+                                                <accessibility key="accessibilityConfiguration" identifier="textUserName"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <variation key="heightClass=compact-widthClass=regular">
@@ -60,7 +60,7 @@
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="12Q-ap-AzY">
                                                 <rect key="frame" x="0.0" y="54" width="333" height="34"/>
-                                                <accessibility key="accessibilityConfiguration" identifier="txtPassword" label="txtPassword"/>
+                                                <accessibility key="accessibilityConfiguration" identifier="txtPassword"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                 <variation key="heightClass=compact-widthClass=regular">
@@ -78,7 +78,7 @@
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j1u-QO-uET">
                                                 <rect key="frame" x="0.0" y="107.99999999999997" width="333" height="29"/>
-                                                <accessibility key="accessibilityConfiguration" identifier="btnLoginRegisterChoice" label="btnLoginRegisterChoice"/>
+                                                <accessibility key="accessibilityConfiguration" identifier="btnLoginRegisterChoice"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Not registered ? Register">
@@ -102,7 +102,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fxh-6p-TBM">
                                         <rect key="frame" x="0.0" y="156.99999999999997" width="333" height="40"/>
                                         <color key="backgroundColor" name="InspectionAppColor"/>
-                                        <accessibility key="accessibilityConfiguration" identifier="btnLoginRegister" label="btnLoginRegister"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="btnLoginRegister"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="7iu-HR-aX7"/>
                                         </constraints>
@@ -440,6 +440,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kTq-1h-oFt">
                                         <rect key="frame" x="0.0" y="0.0" width="166.66666666666666" height="40"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="btnSaveInspection" label="btnSaveInspection"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -473,6 +474,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sva-FW-Ia2">
                                         <rect key="frame" x="186.66666666666663" y="0.0" width="166.33333333333337" height="40"/>
                                         <color key="backgroundColor" name="InspectionAppColor"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="btnSubmitInspection" label="btnSubmitInspection"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -503,6 +505,9 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="cY7-oB-dJp"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <accessibility key="accessibilityConfiguration" identifier="inspectionView" label="inspectionView">
+                            <bool key="isElement" value="YES"/>
+                        </accessibility>
                         <constraints>
                             <constraint firstItem="gO8-Vb-NDW" firstAttribute="leading" secondItem="cY7-oB-dJp" secondAttribute="leading" id="LZy-Rv-v12"/>
                             <constraint firstItem="gO8-Vb-NDW" firstAttribute="top" secondItem="cY7-oB-dJp" secondAttribute="top" id="Mwz-w9-IKA"/>
